layout/fragment_keyword_search, vertical+landscape layouts for keyword search fragment added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     <string name="menu_home">Home</string>
     <string name="menu_advancedSearch">AdvancedSearch</string>
     <string name="menu_addEntry">AddEntry</string>
+
+    <!-- fragment_keyword_search.xml -->
+    <string name="keyword_btn_search">Search</string>
+    <string name="keyword_et_search">search keyword</string>
+    <string name="keyword_btn_addEntry">Add Entry</string>
+    <string name="keyword_btn_advancedSearch">Advanced</string>
+
+
 </resources>
