CategoryOverview*, basic version of Category clickable list finished, TDB: ui testing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,10 @@
     <string name="export_btn_cancel">Cancel</string>
     <string name="export_btn_okay">TBD</string>
 
+    <!-- fragment_category_overview -->
+
+
+
 
 
 </resources>
