--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
 
-
+    <string name="app_name">SimpleKnowledgeBase</string>
 
     <!-- navigation drawer -->
-    <string name="app_name">SimpleKnowledgeBase</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">0 entries</string>
@@ -28,7 +27,6 @@
     <!-- fragment_keyword_recycler_view.xml -->
     <string name="keyword_rec_view_btn_openSource">Open Source</string>
 
-
     <!-- fragment_add_entry.xml -->
     <string name="addentry_btn_addentry">Add entry</string>
     <string name="addentry_btn_to_keyword">Home</string>
@@ -41,9 +39,11 @@
     <string name="export_btn_cancel">Cancel</string>
     <string name="export_btn_okay">TBD</string>
 
-    <!-- fragment_category_overview -->
-
-
+    <!-- fragment_advanced_search -->
+    <string name="advancedSearch_rb_DateSearch">Search by date</string>
+    <string name="advancedSearch_rb_ByTextField">Search by text field</string>
+    <string name="advancedSearch_tv_dateStart">Start date</string>
+    <string name="advancedSearch_tv_dateEnd">End date</string>
 
 
 
