fragment_advanced_Search.xml+AdvancedSearchFragment.kt,search by date: input added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <!-- fragment_advanced_search -->
     <string name="advancedSearch_rb_DateSearch">Search by date</string>
     <string name="advancedSearch_rb_ByTextField">Search by text field</string>
+    <string name="advancedSearch_btn_Search">Search</string>
+    <string name="advancedSearch_btn_Clear">Clear</string>
     <string name="advancedSearch_tv_dateStart">Start date</string>
     <string name="advancedSearch_tv_dateEnd">End date</string>
 
