--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,14 @@
     <string name="advancedSearch_tv_dateStart">Start date</string>
     <string name="advancedSearch_tv_dateEnd">End date</string>
 
+    <!-- advancedSearch_spinner_SearchbyTextField -->
+    <string-array name="advancedSearch_spinner_SearchbyTextField">
+        <item>Title</item>
+        <item>Category</item>
+        <item>Description</item>
+        <item>Source-URL</item>
+    </string-array>
+
 
 
 </resources>
