ImportDatabase.kt+MainActivity.kt, import scripts works but no good error hanlding found yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,9 @@
         <item>Source-URL</item>
     </string-array>
 
+    <!-- ImportDatabase -->
+    <string name="importFinishedMessage">CSV imported!</string>
+    <string name="importErrorMessage">Import failed!</string>
 
 
 </resources>
