--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,10 @@
     <!-- ImportDatabase -->
     <string name="importFinishedMessage">CSV imported!</string>
     <string name="importErrorMessage">Import failed!</string>
+    <string name="titleMax">50</string>
+    <string name="categoryMax">20</string>
+    <string name="descriptionMax">500</string>
+    <string name="sourceMax">400</string>
 
 
 </resources>
